--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h1>Homepage</h1>
+    <div class="d-flex justify-content-center vertical-center">
+        <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
+
+            <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
+                <form class="form-signin ">
+                    <h2>Sign up</h2>
+                    <div class="form-floating">
+                        <input type="email" class="form-control" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="username" class="form-control" placeholder="Username">
+                        <label for="floatingInput">Username</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div>
+                    <button class="mt-3 btn btn-outline-secondary" type="button">Sign up</button>
+                </form>
+                <p class="mt-3">Already have an account? <a class="link-secondary" href="#">Click here</a></p>
+            </div>
+
+        </div>
+
+    </div>
 </body>
+
 </html>
