--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,8 +17,8 @@
         <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
 
             <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
-                <form class="form-signin ">
-                    <h2>Sign up</h2>
+                <form class="form-signin" action="/register" method="POST">
+                    <h2 class="mb-3">Sign up</h2>
                     <div class="form-floating">
                         <input type="email" class="form-control" placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
@@ -31,9 +31,9 @@
                         <input type="password" class="form-control" placeholder="Password">
                         <label for="floatingPassword">Password</label>
                     </div>
-                    <button class="mt-3 btn btn-outline-secondary" type="button">Sign up</button>
+                    <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Sign up</button>
                 </form>
-                <p class="mt-3">Already have an account? <a class="link-secondary" href="#">Click here</a></p>
+                <p class="mt-3">Already have an account? <a class="link-success" href="/login">Click here</a></p>
             </div>
 
         </div>
