--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,15 +20,15 @@
                 <form class="form-signin" action="/register" method="POST">
                     <h2 class="mb-3">Sign up</h2>
                     <div class="form-floating">
-                        <input type="email" class="form-control" placeholder="name@example.com">
+                        <input type="email" class="form-control" placeholder="name@example.com" name="email" required>
                         <label for="floatingInput">Email address</label>
                     </div>
                     <div class="form-floating">
-                        <input type="username" class="form-control" placeholder="Username">
+                        <input type="username" class="form-control" placeholder="Username" name="username" required>
                         <label for="floatingInput">Username</label>
                     </div>
                     <div class="form-floating">
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Password" name="password" required>
                         <label for="floatingPassword">Password</label>
                     </div>
                     <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Sign up</button>
