--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
 
             <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
-                <form class="form-signin" action="/register" method="POST">
+                <form class="form-signin" action="/user/signup" method="POST">
                     <h2 class="mb-3">Sign up</h2>
                     <div class="form-floating">
                         <input type="email" class="form-control" placeholder="name@example.com" name="email" required>
@@ -33,7 +33,7 @@
                     </div>
                     <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Sign up</button>
                 </form>
-                <p class="mt-3">Already have an account? <a class="link-success" href="/login">Click here</a></p>
+                <p class="mt-3">Already have an account? <a class="link-success" href="/user/login">Click here</a></p>
             </div>
 
         </div>
