--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
 
             <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
-                <form class="form-signin" action="/login" method="POST">
+                <form class="form-signin" action="/user/login" method="POST">
                     <h2 class="mb-3">Log in</h2>
                     <div class="form-floating">
                         <input type="username" class="form-control" placeholder="Username">
