Sign up and log in now working. JWT stored in cookie to identify user after sign up/log in

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,11 +20,11 @@
                 <form class="form-signin" action="/user/login" method="POST">
                     <h2 class="mb-3">Log in</h2>
                     <div class="form-floating">
-                        <input type="username" class="form-control" placeholder="Username">
+                        <input type="username" class="form-control" placeholder="Username" name="username">
                         <label for="floatingInput">Username</label>
                     </div>
                     <div class="form-floating">
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" class="form-control" placeholder="Password" name="password">
                         <label for="floatingPassword">Password</label>
                     </div>
                     <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Log in</button>
