--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
                         <input type="password" class="form-control" placeholder="Password" name="password">
                         <label for="floatingPassword">Password</label>
                     </div>
-                    <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Log in</button>
+                    <button class="mt-3 btn btn-grn btn-lg rounded-pill" type="submit">Log in</button>
                 </form>
             </div>
 
