--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,7 +31,7 @@
                         <input type="password" class="form-control" placeholder="Password" name="password" required>
                         <label for="floatingPassword">Password</label>
                     </div>
-                    <button class="mt-3 btn btn-success btn-lg rounded-pill" type="submit">Sign up</button>
+                    <button class="mt-3 btn btn-grn btn-lg rounded-pill" type="submit">Sign up</button>
                 </form>
                 <p class="mt-3">Already have an account? <a class="link-success" href="/user/login">Click here</a></p>
             </div>
