--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,8 +10,22 @@ a {
   text-decoration: none;
 }
 
+.home {
+  padding-top: 4.5rem;
+}
+
 .navi {
-  background-color: #D7FBE8;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(3px);
+}
+
+.content {
+  cursor: default;
+}
+
+.post-info {
+  color: black;
+  font-size: small;
 }
 
 .material-symbols-outlined {
@@ -64,4 +78,8 @@ a {
 .nav-title:hover,
 .material-symbols-outlined:hover {
   color: #1FAB89;
+}
+
+.content:hover {
+  background-color: #1FAB89;
 }
