--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,6 +50,12 @@ a {
   align-items: center;
 }
 
+.prevent-select {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
