--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,12 +59,12 @@
                     </p>
                     <div class="justify-content-end d-flex">
                         <div class="col-2">
-                            <p class="text-end pe-1">
+                            <p class="text-end pe-1 likes">
                                 <%= post.likes %>
                             </p>
                         </div>
                         <div class="col-1">
-                            <span class="material-symbols-outlined">
+                            <span class="material-symbols-outlined heart off prevent-select">
                                 favorite
                             </span>
                         </div>
@@ -74,6 +74,8 @@
             </div>
             <%});%>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/scripts/home.js" charset="utf-8"></script>
 </body>
 
 </html>
