New post route to update likes, Post model changed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,7 +64,8 @@
                             </p>
                         </div>
                         <div class="col-1">
-                            <span class="material-symbols-outlined heart off prevent-select">
+                            <span class="material-symbols-outlined heart off prevent-select"
+                                onclick="updateLikes('<%= username %>', '<%= post.id%>')">
                                 favorite
                             </span>
                         </div>
