--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,11 @@ a {
   padding-top: 4.5rem;
 }
 
+.link-content {
+  text-decoration: none;
+  color: black;
+}
+
 .navi {
   background-color: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(3px);
@@ -88,4 +93,8 @@ a {
 
 .content:hover {
   background-color: #1FAB89;
+}
+
+.link-content:hover {
+  color: black;
 }
