User route for profiles

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/home">
                         <span class="material-symbols-outlined">home</span>
                     </a>
-                    <a class="nav-link" href="/<%= username %>">
+                    <a class="nav-link" href="/user/<%= username %>">
                         <span class="material-symbols-outlined">person</span>
                     </a>
                     <a class="nav-link" href="/explore">
