User profile page design

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
         <!-- bg-light -->
         <nav class="navbar navbar-light navi fixed-top">
             <div class="container container-fluid">
-                <h3 class="nav-title">BLOG</h3>
+                <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
 
                 <div class="d-flex">
                     <a class="nav-link" href="/home">
