--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,7 +87,7 @@
             <%});%>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/scripts/home.js" charset="utf-8"></script>
+    <script src="/scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
