--- a/views/post.ejs
+++ b/views/post.ejs
@@ -80,7 +80,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/scripts/home.js" charset="utf-8"></script>
+    <script src="/scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
