--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -40,7 +40,7 @@
             <div class="container mt-2 mb-4 col-md-6">
                 <div class="h-100 p-5 pb-2 pt-2 bg-light border rounded-3 content">
 
-                    <% if (!user){ %>
+                    <% if (!user || profile.name === user.name){ %>
                         <h2>
                                 <%= profile.name %>
                         </h2>
@@ -53,9 +53,9 @@
                             </div>
                             <div class="col-6 text-end">
                                 <% if (profile.followers.includes(user.name)) { %> 
-                                    <button type="button" class="mt-1 btn btn-dark rounded-pill follow off" onclick="updateFollow()">Unfollow</button>
+                                    <button type="button" class="mt-1 btn btn-dark rounded-pill follow off" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Unfollow</button>
                                 <% }else { %> 
-                                    <button type="button" class="mt-1 btn btn-success rounded-pill follow on" onclick="updateFollow()">Follow</button>
+                                    <button type="button" class="mt-1 btn btn-success rounded-pill follow on" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Follow</button>
                                 <% } %> 
                             </div>
                         </div>
@@ -63,12 +63,12 @@
 
 
                     <div class="container d-flex p-0 mb-1 post-info">
-                        <div class="col-2">
+                        <div class="col-4 col-md-3 col-lg-2">
                             <p class="mb-0">
                                 <%= profile.followers.length %> Followers
                             </p>
                         </div>
-                        <div class="col-2">
+                        <div class="col-4 col-md-3 col-lg-2">
                             <p class="mb-0">
                                 <%= profile.following.length %> Following
                             </p>
