--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -65,7 +65,7 @@
                     <div class="container d-flex p-0 mb-1 post-info">
                         <div class="col-4 col-md-3 col-lg-2">
                             <p class="mb-0">
-                                <%= profile.followers.length %> Followers
+                                <span class="followers"><%= profile.followers.length %></span> Followers
                             </p>
                         </div>
                         <div class="col-4 col-md-3 col-lg-2">
