--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,38 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <div class="d-flex justify-content-center vertical-center">
-        <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
+  <div class="d-flex justify-content-center vertical-center">
+    <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
 
-            <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
-                <form class="form-signin" action="/user/login" method="POST">
-                    <h2 class="mb-3">Log in</h2>
-                    <div class="form-floating">
-                        <input type="username" class="form-control" placeholder="Username" name="username">
-                        <label for="floatingInput">Username</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" class="form-control" placeholder="Password" name="password">
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                    <button class="mt-3 btn btn-grn btn-lg rounded-pill" type="submit">Log in</button>
-                </form>
-            </div>
-
-        </div>
+      <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
+        <form class="form-signin" action="/user/login" method="POST">
+          <h2 class="mb-3">Log in</h2>
+          <div class="form-floating">
+            <input type="username" class="form-control" placeholder="Username" name="username">
+            <label for="floatingInput">Username</label>
+          </div>
+          <div class="form-floating">
+            <input type="password" class="form-control" placeholder="Password" name="password">
+            <label for="floatingPassword">Password</label>
+          </div>
+          <button class="mt-3 btn btn-grn btn-lg rounded-pill" type="submit">Log in</button>
+        </form>
+      </div>
 
     </div>
+
+  </div>
 </body>
 
 </html>
