--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,85 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLOG</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BLOG</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <div class="home">
+  <div class="home">
 
-        <nav class="navbar navbar-light navi fixed-top">
-            <div class="container container-fluid">
-                <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
+    <nav class="navbar navbar-light navi fixed-top">
+      <div class="container container-fluid">
+        <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
 
-                <div class="d-flex">
-                    <a class="nav-link" href="/home">
-                        <span class="material-symbols-outlined">home</span>
-                    </a>
-                    <a class="nav-link" href="/user/<%= username %>">
-                        <span class="material-symbols-outlined">person</span>
-                    </a>
-                    <a class="nav-link" href="/explore">
-                        <span class="material-symbols-outlined">search</span>
-                    </a>
-                </div>
-            </div>
-        </nav>
-
-        <div class="container mt-2 mb-4 col-md-6">
-            <div class="h-100 p-5 pb-2 bg-light border rounded-3 content">
-                <div class="container d-flex p-0 mb-1 post-info">
-                    <div class="col-6">
-                        <p class="mb-0">
-                            By <%= post.author %>
-                        </p>
-                    </div>
-                    <div class="col-6 text-end">
-                        <p class="mb-0">
-                            <%= post.date %>
-                        </p>
-                    </div>
-                </div>
-                <h2>
-                    <%= post.title %>
-                </h2>
-                <p>
-                    <%= post.body %>
-                </p>
-                <div class="justify-content-end d-flex">
-                    <div class="col-2">
-                        <p class="text-end pe-1 likes">
-                            <%= post.likes %>
-                        </p>
-                    </div>
-                    <div class="col-1">
-                        <% if(post.likedBy.includes(username)){ %>
-                            <span id="<%= post.id %>" class="material-symbols-outlined heart prevent-select on"
-                                style="color: red;" onclick="updateLikes('<%= username %>', '<%= post.id%>')">
-                                favorite
-                            </span>
-                        <% } else { %>
-                            <span id="<%= post.id %>" class="material-symbols-outlined heart prevent-select off"
-                                onclick="updateLikes('<%= username %>', '<%= post.id%>')">
-                                favorite
-                            </span>
-                        <% } %>
-                    </div>
-
-                </div>
-            </div>
+        <div class="d-flex">
+          <a class="nav-link" href="/home">
+            <span class="material-symbols-outlined">home</span>
+          </a>
+          <a class="nav-link" href="/user/<%= username %>">
+            <span class="material-symbols-outlined">person</span>
+          </a>
+          <a class="nav-link" href="/explore">
+            <span class="material-symbols-outlined">search</span>
+          </a>
         </div>
+      </div>
+    </nav>
+
+    <div class="container mt-2 mb-4 col-md-6">
+      <div class="h-100 p-5 pb-2 bg-light border rounded-3 content">
+        <div class="container d-flex p-0 mb-1 post-info">
+          <div class="col-6">
+            <p class="mb-0">
+              By <%= post.author %>
+            </p>
+          </div>
+          <div class="col-6 text-end">
+            <p class="mb-0">
+              <%= post.date %>
+            </p>
+          </div>
+        </div>
+        <h2>
+          <%= post.title %>
+        </h2>
+        <p>
+          <%= post.body %>
+        </p>
+        <div class="justify-content-end d-flex">
+          <div class="col-2">
+            <p class="text-end pe-1 likes">
+              <%= post.likes %>
+            </p>
+          </div>
+          <div class="col-1">
+            <% if(post.likedBy.includes(username)){ %>
+            <span id="<%= post.id %>" class="material-symbols-outlined heart prevent-select on" style="color: red;" onclick="updateLikes('<%= username %>', '<%= post.id%>')">
+              favorite
+            </span>
+            <% } else { %>
+            <span id="<%= post.id %>" class="material-symbols-outlined heart prevent-select off" onclick="updateLikes('<%= username %>', '<%= post.id%>')">
+              favorite
+            </span>
+            <% } %>
+          </div>
+
+        </div>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/scripts/script.js" charset="utf-8"></script>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="/scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
