--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,90 +2,103 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%=profile.name%>
-    </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+    <%=profile.name%>
+  </title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <div class="home">
-        <nav class="navbar navbar-light navi fixed-top">
-            <div class="container container-fluid">
-                <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
-                <% if (user){ %>
-                    <div class="d-flex">
-                        <a class="nav-link" href="/home">
-                            <span class="material-symbols-outlined">home</span>
-                        </a>
-                        <a class="nav-link" href="/user/<%= user.name %>">
-                            <span class="material-symbols-outlined">person</span>
-                        </a>
-                        <a class="nav-link" href="/explore">
-                            <span class="material-symbols-outlined">search</span>
-                        </a>
-                    </div>
-                <% } %>  
-            </div>
-        </nav>
+  <div class="home">
+    <nav class="navbar navbar-light navi fixed-top">
+      <div class="container container-fluid">
+        <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
+        <% if (user){ %>
+        <div class="d-flex">
+          <a class="nav-link" href="/home">
+            <span class="material-symbols-outlined">home</span>
+          </a>
+          <a class="nav-link" href="/user/<%= user.name %>">
+            <span class="material-symbols-outlined">person</span>
+          </a>
+          <a class="nav-link" href="/explore">
+            <span class="material-symbols-outlined">search</span>
+          </a>
+        </div>
+        <% } %>
+      </div>
+    </nav>
 
-            <div class="container mt-2 mb-4 col-md-6">
-                <div class="h-100 p-5 pb-2 pt-2 bg-light border rounded-3 content">
+    <div class="container mt-2 mb-4 col-md-6">
+      <div class="h-100 p-5 pb-2 pt-2 bg-light border rounded-3 content">
 
-                    <% if (!user || profile.name === user.name){ %>
-                        <h2>
-                                <%= profile.name %>
-                        </h2>
-                    <% } else { %>  
-                        <div class="container d-flex p-0 post-info">
-                            <div class="col-6">
-                                <h2>
-                                    <%= profile.name %>
-                            </h2>
-                            </div>
-                            <div class="col-6 text-end">
-                                <% if (profile.followers.includes(user.name)) { %> 
-                                    <button type="button" class="mt-1 btn btn-dark rounded-pill follow off" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Unfollow</button>
-                                <% }else { %> 
-                                    <button type="button" class="mt-1 btn btn-success rounded-pill follow on" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Follow</button>
-                                <% } %> 
-                            </div>
-                        </div>
-                    <% } %> 
+        <% if (!user){ %>
+        <h2>
+          <%= profile.name %>
+        </h2>
+        <% } else if (profile.name===user.name) { %>
+        <div class="container d-flex p-0 post-info">
+          <div class="col-6">
+            <h2>
+              <%= profile.name %>
+            </h2>
+          </div>
+          <div class="col-6 text-end">
+            <button type="button" class="mt-1 btn btn-primary rounded-pill">New Post</button>
+          </div>
+        </div>
+        <% } else { %>
+        <div class="container d-flex p-0 post-info">
+          <div class="col-6">
+            <h2>
+              <%= profile.name %>
+            </h2>
+          </div>
+          <div class="col-6 text-end">
+            <% if (profile.followers.includes(user.name)) { %>
+            <button type="button" class="mt-1 btn btn-dark rounded-pill follow off" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Unfollow</button>
+            <% }else { %>
+            <button type="button" class="mt-1 btn btn-success rounded-pill follow on" onclick="updateFollow('<%= user.name%>', '<%= profile.name%>')">Follow</button>
+            <% } %>
+          </div>
+        </div>
+        <% } %>
 
 
-                    <div class="container d-flex p-0 mb-1 post-info">
-                        <div class="col-4 col-md-3 col-lg-2">
-                            <p class="mb-0">
-                                <span class="followers"><%= profile.followers.length %></span> Followers
-                            </p>
-                        </div>
-                        <div class="col-4 col-md-3 col-lg-2">
-                            <p class="mb-0">
-                                <%= profile.following.length %> Following
-                            </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <h4>Posts</h4>
-                    <%posts.forEach(function(post){%>
-                        <div class="container mb-2 post-prev">
-                            <a class="link-content" href="/posts/<%= post._id %> "><%= post.title %></a>
-                        </div>
-                    <%});%>
-                </div>
-            </div>
+        <div class="container d-flex p-0 mb-1 post-info">
+          <div class="col-4 col-md-3 col-lg-2">
+            <p class="mb-0">
+              <span class="followers">
+                <%= profile.followers.length %>
+              </span> Followers
+            </p>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2">
+            <p class="mb-0">
+              <%= profile.following.length %> Following
+            </p>
+          </div>
+        </div>
+        <hr>
+        <h4>Posts</h4>
+        <%posts.forEach(function(post){%>
+        <div class="container mb-2 post-prev">
+          <a class="link-content" href="/posts/<%= post._id %> ">
+            <%= post.title %>
+          </a>
+        </div>
+        <%});%>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/scripts/script.js" charset="utf-8"></script>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="/scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
