Create post route + page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -50,7 +50,7 @@
             </h2>
           </div>
           <div class="col-6 text-end">
-            <button type="button" class="mt-1 btn btn-primary rounded-pill">New Post</button>
+            <a href="/posts/create" class="mt-1 btn btn-primary rounded-pill">New Post</a>
           </div>
         </div>
         <% } else { %>
