--- a/views/create.ejs
+++ b/views/create.ejs
@@ -38,7 +38,7 @@
     <div class="d-flex justify-content-center vertical-center">
       <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
         <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
-          <form action="/create" method="post">
+          <form action="/posts/create" method="post">
             <div class="form-group">
               <label class="form-label">Title</label><br>
               <input class="form-control" type="text" name="postTitle"><br>
