Links to user profile from blog post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
         <div class="container d-flex p-0 mb-1 post-info">
           <div class="col-6">
             <p class="mb-0">
-              By <%= post.author %>
+              <a class="link-content" href="/user/<%= post.author %>">By <%= post.author %></a>
             </p>
           </div>
           <div class="col-6 text-end">
