--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -13,30 +13,29 @@
 </head>
 
 <body>
+  <div class="home">
+    <!-- bg-light -->
+    <nav class="navbar navbar-light navi fixed-top">
+      <div class="container container-fluid">
+        <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
 
-  <!-- bg-light -->
-  <nav class="navbar navbar-light navi fixed-top">
-    <div class="container container-fluid">
-      <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
-
-      <div class="d-flex">
-        <a class="nav-link" href="/home">
-          <span class="material-symbols-outlined">home</span>
-        </a>
-        <a class="nav-link" href="/user/<%= username %>">
-          <span class="material-symbols-outlined">person</span>
-        </a>
-        <a class="nav-link" href="/explore">
-          <span class="material-symbols-outlined">search</span>
-        </a>
+        <div class="d-flex">
+          <a class="nav-link" href="/home">
+            <span class="material-symbols-outlined">home</span>
+          </a>
+          <a class="nav-link" href="/user/<%= username %>">
+            <span class="material-symbols-outlined">person</span>
+          </a>
+          <a class="nav-link" href="/explore">
+            <span class="material-symbols-outlined">search</span>
+          </a>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
 
 
-  <div class="d-flex justify-content-center vertical-center mt-10">
-    <div class="col-12 col-lg-6 col-md-8 col-sm-11 ">
+    <div class="container mt-2 mb-4 col-md-6 mt-5">
       <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
         <form action="/posts/update/<%= post._id %>" method="post">
           <div class="form-group">
@@ -51,8 +50,38 @@
         </form>
       </div>
     </div>
+
+    <div class="container mt-2 mb-4 col-md-6 text-end">
+      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Delete Post
+      </button>
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Delete post?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this post?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-light border-dark" data-bs-dismiss="modal">Cancel</button>
+            <form action="/posts/delete/<%= post._id %>" method="post">
+              <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
