--- a/views/post.ejs
+++ b/views/post.ejs
@@ -50,9 +50,7 @@
         <h2>
           <%= post.title %>
         </h2>
-        <p>
-          <%= post.body %>
-        </p>
+        <p class="post-body"><%= post.body %></p>
         <div class="justify-content-end d-flex">
           <div class="col-2">
             <p class="text-end pe-1 likes">
