Search route, ejs partials (navbar)

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,26 +14,8 @@
 
 <body>
   <div class="home">
-    <!-- bg-light -->
-    <nav class="navbar navbar-light navi fixed-top">
-      <div class="container container-fluid">
-        <h3 class="nav-title"> <a href="/home" class="link-content">BLOG</a></h3>
 
-        <div class="d-flex">
-          <a class="nav-link" href="/home">
-            <span class="material-symbols-outlined">home</span>
-          </a>
-          <a class="nav-link" href="/user/<%= username %>">
-            <span class="material-symbols-outlined">person</span>
-          </a>
-          <a class="nav-link" href="/explore">
-            <span class="material-symbols-outlined">search</span>
-          </a>
-        </div>
-      </div>
-    </nav>
-
-
+    <%- include('partials/navbar'); -%>
 
     <div class="container mt-2 mb-4 col-md-6 mt-5">
       <div class="h-100 p-5 pt-4 pb-4 bg-light border rounded-3">
