--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/user/<%= user.name %>">
             <span class="material-symbols-outlined">person</span>
           </a>
-          <a class="nav-link" href="/explore">
+          <a class="nav-link" href="/search">
             <span class="material-symbols-outlined">search</span>
           </a>
         </div>
