moved live search function to own file

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -29,7 +29,7 @@
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/scripts/script.js" charset="utf-8"></script>
+  <script src="/scripts/livesearch.js" charset="utf-8"></script>
 </body>
 
 </html>
