Log out and delete account functions, removed likes counter from post model

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -38,7 +38,7 @@
         <div class="justify-content-end d-flex">
           <div class="col-2">
             <p class="text-end pe-1 likes">
-              <%= post.likes %>
+              <%= post.likedBy.length %>
             </p>
           </div>
           <div class="col-1">
